--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m previewdeploi && git push",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "_EnzooLionel",
